base: Smart Charging (1/4)
Also includes:

  From: DennySPB <dennyspb@gmail.com>
  Date: Fri, 17 May 2019 09:49:23 +0300
  Subject: [PATCH] SmartCharging: Rework and add more customizations

  From: Pranav Vashi <neobuddy89@gmail.com>
  Date: Thu, 16 Jan 2020 01:30:38 +0530
  Subject: [PATCH] Add config to make Smart Charging available on device

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/core/res/res/values/lineage_symbols.xml
+++ b/core/res/res/values/lineage_symbols.xml
@@ -27,4 +27,12 @@
     <java-symbol type="array" name="config_forceEnabledComponents" />
 
     <java-symbol type="bool" name="config_has_Soli" />
+
+  <!-- Smart charging -->
+  <java-symbol type="bool" name="config_smartChargingAvailable" />
+  <java-symbol type="integer" name="config_smartChargingBatteryLevel" />
+  <java-symbol type="integer" name="config_smartChargingBatteryResumeLevel" />
+  <java-symbol type="string" name="config_smartChargingSysfsNode" />
+  <java-symbol type="string" name="config_smartChargingSuspendValue" />
+  <java-symbol type="string" name="config_smartChargingResumeValue" />
 </resources>
